# OpenSY

./: .gitignore  AUDIT_REPORT.md  CMakeLists.txt  CONTRIBUTING.md  README.md  gen_bip324_vectors.cpp  mine.sh  mine_forever.sh  mine_genesis.cpp  mine_genesis_correct.py  mine_genesis_final.py  mine_genesis_simple.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  good_first_issue.yml
.github/workflows/: ci.yml
ci/test/: 00_setup_env_native_valgrind.sh  00_setup_env_s390x.sh  03_test_script.sh
cmake/: randomx.cmake
contrib/: README.md  generate_genesis.sh  migrate_opensy.sh
contrib/debian/: copyright
contrib/deploy/: README.md  setup-dns-seeder.sh  setup-node.sh
contrib/init/: opensyd.service
contrib/linearize/: linearize-data.py
contrib/macdeploy/: README.md
contrib/seeder/: README.md  opensy-seeder.service
contrib/seeds/: nodes_main.txt
contrib/tools/: README.md  genesis_miner.cpp  print_genesis.cpp
contrib/verify-binaries/: README.md  verify.py
doc/: README_doxygen.md  REST-interface.md  WHITEPAPER.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  randomx-hardfork.md  release-notes-33770.md  release-notes-empty-template.md  release-process.md
doc/design/: assumeutxo.md  libraries.md  multiprocess.md
doc/policy/: mempool-limits.md  mempool-replacements.md  (+1 more)
docs/: CONFIRMATION_GUIDELINES.md  LAUNCH_DAY.md  MINING_POOL_ARCHITECTURE.md  NODE_OPERATOR_GUIDE.md  WALLET_RESTORE_GUIDE.md
explorer/: .env.example  README.md  package-lock.json  package.json  server.js
mining/: README.md
src/: CMakeLists.txt  addrdb.cpp  addrdb.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  banman.h  base58.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  coins.h  compressor.cpp  compressor.h  flatfile.h  hash.h  httpserver.cpp  init.cpp  init.h  key.cpp  key.h  key_io.h  logging.cpp  logging.h  merkleblock.cpp  merkleblock.h  net.cpp  net.h  net_permissions.cpp  net_permissions.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  (+35 more)
src/crypto/: CMakeLists.txt  argon2_context.cpp  argon2_context.h  randomx_context.h  randomx_pool.cpp  randomx_pool.h  sha256_sse4.cpp
test/: config.ini
(+503 files in other folders)
